# cpp-trading-core

./: .gitignore  CMakeLists.txt  README.md
app/: bench_basic_main.cpp  bench_order_book_main.cpp  bench_order_book_tsc_main.cpp  bybit_orderbook_snapshot_main.cpp  bybit_rest_demo_main.cpp  bybit_ws_orderbook_live_main.cpp  bybit_ws_trades_main.cpp  generate_events_main.cpp  live_feed_main.cpp  mt_bench_main.cpp  replay_main.cpp  ws_orderbook_snapshot_main.cpp
doc/: performance.md
include/exchange/: bybit_public_rest.hpp  bybit_public_ws.hpp
include/trading/: event.hpp  order_book.hpp  types.hpp
include/utils/: benchmark.hpp  http_client.hpp  spsc_queue.hpp  tsc_timer.hpp
src/: order_book.cpp
src/exchange/: bybit_public_rest.cpp  bybit_public_ws.cpp
src/utils/: http_client.cpp
tests/: order_book_basic_tests.cpp
tools/: bybit_ws_feed.py  bybit_ws_orderbook.py
